# hack-backend

./: .gitignore  pyproject.toml  run.py
app/: app.py
app/database/: models.py
app/routers/v1/: app.py
app/routers/v1/handlers/: documents.py  files.py  pages.py  process.py
files/: 3837d289-3f48-4d79-9af6-01edc4750fec  970dfc76-a848-40c6-8a51-2f9e61a388cf  b9c103d0-7446-4dd5-9190-41db30d52d50  ee36967f-05d8-4e00-b8d1-df5d645d510c
pages/: 058c4df4-56a4-4f78-b004-14ebc7e35272  44586c55-d8d8-431e-8d12-aa39d49e016e  4d4f4a80-7997-420a-be99-9da32f45b46d  b37c9136-2ee4-48b3-9178-201d4d8cd840  c4c85d14-e805-4d86-9d3f-4a3b39a0ea01  f71e25dc-62da-45c2-b602-a2bb1aa7687e
settings/: config.py
utils/: api.py  files.py
